--- a/Locality/Info.plist
+++ b/Locality/Info.plist
@@ -12,7 +12,7 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
-	<key>CFBundlePackageType</key>
+	<key>CFBundleQueryType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
